--- a/product-manager.html
+++ b/product-manager.html
@@ -40,12 +40,28 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698402175-senior-product-manager'>Bosch Group Senior Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ayla-networks/job/othebfwT'>Ayla Networks Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Medfar/743999698311406-product-owner'>Medfar Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/soroco/jobs/1915133'>Job Application for Senior Product Manager at Soroco</a></h5> 
+<p><span class="badge badge-light">Bengaluru</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698407469-product-designer'>Points International Product Designer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698402175-senior-product-manager'>Bosch Group Senior Product Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Warren, MI</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Austin, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/knockrentals/9c9feaa5-ddb7-48af-9136-51cd415a5cd0'>Knock, Inc - Senior Product Manager</a></h5> 
@@ -66,7 +82,7 @@
 <p><span class="badge badge-light">Mexico Mexico</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -248,7 +264,7 @@
 <p><span class="badge badge-light">Hamburg</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432798-product-manager-software-saas-winner-of-best-tech-company'>Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE & SAAS - WINNER OF BEST TECH COMPANY | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432798-product-manager-software-saas-winner-of-best-tech-company'>Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE & SAAS - WINNER OF BEST TECH COMPANY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -308,7 +324,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24961-Product-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24961-Product-Designer?source=twitter'>
       Product Designer at Input Logic - Nanaimo, BC, Canada - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
@@ -330,7 +346,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oGbrbfwd&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=ntdMmMw5'>New Relic Careers - Field Product Manager - Telemetry Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oGbrbfwd&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=ntdMmMw5'>New Relic Careers - Field Product Manager - Telemetry Platform</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  San Francisco, California  Portland, OR</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -358,7 +374,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/o0Jqbfw4'>Curriculum Associates Careers - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/curriculumassociates/job/o0Jqbfw4'>Curriculum Associates Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -400,7 +416,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://the-well.breezy.hr/p/5f67c34a96c0-product-manager'>Product Manager at The Well - Creative Consultants</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://the-well.breezy.hr/p/5f67c34a96c0-product-manager'>Product Manager at The Well - Creative Consultants</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -443,24 +459,6 @@ New York, NY.</p>
 <h5><a href='https://authenticjobs.com/jobs/31692?r=rss2'>Authentic Jobs Product Designer at Livefront at Livefront</a></h5> 
 <p><span class="badge badge-light">Minneapolis, MN</span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/etsy/243e23db-4a62-4317-b222-216a103110a0'>Etsy - Senior Product Designer, Shopping Experiences</a></h5> 
-<p><span class="badge badge-light">New York, NY</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698314401-technical-product-manager-for-global-sportswear-brand'>Aroghia Group Technical Product Manager for Global Sportswear Brand | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Beaverton, OR, USA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dribbble.com/jobs/18819-Senior-Product-Designer?source=twitter'>
-      Senior Product Designer at HealthJoy - Chicago, IL - Dribbble Design Jobs
-  </a></h5> 
-<p><span class="badge badge-light">Chicago, IL</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='http://steelseries.applytojob.com/apply/pkGKEd0SrJ/Product-Manager'>Product Manager - SteelSeries - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
 <hr/>
 
 
