--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/HazteOirorg/743999684921275-web-developer-with-experience-in-php-mysql-css-javascript'>HazteOir.org Web developer with experience in PHP, MySQL, CSS, JavaScript | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Madrid Madrid, Spain Madrid Madrid</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409357-sr-software-engineer-web-developer'>Adam Kay Group Sr. Software Engineer - Web Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://riafinancial.referrals.selectminds.com/jobs/web-developer-1647'>Web Developer - Ria Careers</a></h5> 
+<p><span class="badge badge-light">United States United States</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=obw1afwC&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nWrunMwv'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<p><span class="badge badge-light">Bangalore, India</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/FullCircleRecruitingLLC/743999698392315-web-developer?trid=33221b55-7baa-4189-992e-a7fac0c08950'>Full Circle Recruiting, LLC Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -54,7 +70,7 @@
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://monetizem.applytojob.com/apply/gO6r4Zsetn/Web-Developer-fully-Remote'>Web Developer (fully remote) - MonetizeMore - Career Page</a></h5> 
+<h5><a href='http://monetizem.applytojob.com/apply/gO6r4Zsetn/Web-Developer-fully-Remote'>Web Developer (fully remote) - MonetizeMore - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -110,7 +126,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://proobject.com/careers/prime-web-developer-level-1-sharepoint-javascript-html-css/'>ProObject, Inc. |   PRIME Web Developer Level 1 (SharePoint, JavaScript, HTML, CSS)</a></h5> 
+<h5><a href='https://proobject.com/careers/prime-web-developer-level-1-sharepoint-javascript-html-css/'>ProObject, Inc. |   PRIME Web Developer Level 1 (SharePoint, JavaScript, HTML, CSS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -180,7 +196,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idealocareer.recruitee.com/l/en/o/lead-web-performance-developer-mfx'>
+<h5><a href='https://idealocareer.recruitee.com/l/en/o/lead-web-performance-developer-mfx'>
       Lead Web Performance Developer (m|f|x) - idealo internet GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -210,7 +226,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://www.bigshoesnetwork.com/job/front-end-web-designer-developer/hellermanntyton/19144'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.bigshoesnetwork.com/job/front-end-web-designer-developer/hellermanntyton/19144'>
 	Front-End Web Designer/Developer - HellermannTyton - Big Shoes Network, Inc.
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -224,7 +240,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ongoing.join.com/jobs/461804-senior-web-developer-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): ??? Senior Web-Developer 80-1... | JOIN</a></h5> 
+<h5><a href='https://ongoing.join.com/jobs/461804-senior-web-developer-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): ??? Senior Web-Developer 80-1... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -242,7 +258,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://interworks.applytojob.com/apply/eeheDbaou2/FrontEnd-Web-Developer'>Front-End Web Developer - InterWorks, Inc. - Career Page</a></h5> 
+<h5><a href='http://interworks.applytojob.com/apply/eeheDbaou2/FrontEnd-Web-Developer'>Front-End Web Developer - InterWorks, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -266,7 +282,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ogvobfw4'>WebMD Careers - Sr Director, Content Development</a></h5> 
+<h5><a href='https://jobs.jobvite.com/webmd/job/ogvobfw4'>WebMD Careers - Sr Director, Content Development</a></h5> 
 <p><span class="badge badge-light">United States  Atlanta, Georgia  New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -443,23 +459,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697932865-praktikant-in-web-application-development'>Bosch Group Praktikant*in Web Application Development | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://kapacht.join.com/jobs/452902-web-developer-m-w-d'>Job @ kapacht (Frankfurt am Main): Web Developer (... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://www.quipu.de/careers/web-developer-microsoft-net/'>Quipu | Web Developer Microsoft .NET</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-23</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/stars-group/job/oraobfwU'>The Stars Group Careers - Front End Web Developer - Casino - 12 month FTC</a></h5> 
-<p><span class="badge badge-light">Toronto, Ontario  Richmond Toronto</span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
